--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/Servo@^1.2.2
 	arduino-libraries/LiquidCrystal@^1.0.7
+	janelia-arduino/Watchdog@^3.0.2
